feat(auth): /api/authclients returns only usable providers (#255)
Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>