@@ -1,7 +1,7 @@
 package com.translatr.controller;
 
-import com.translatr.config.TranslatrConfig;
 import com.translatr.dto.AuthClientDto;
+import com.translatr.service.AuthProviderStatusService;
 import jakarta.annotation.security.PermitAll;
 import jakarta.inject.Inject;
 import jakarta.ws.rs.GET;
@@ -9,39 +9,35 @@ import jakarta.ws.rs.Path;
 import jakarta.ws.rs.Produces;
 import jakarta.ws.rs.core.MediaType;
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
- * Returns the list of configured authentication providers.
- * The provider names come from {@code translatr.auth.providers} (comma-separated).
- * Each entry maps to the {@code /login/{provider}} URL handled by Quarkus OIDC.
+ * Returns the auth providers a visitor can actually use: named in
+ * {@code translatr.auth.providers} AND backed by a configured client id/secret.
+ * Each maps to {@code /login/{key}}, handled by {@link LoginResource} + Quarkus OIDC.
  */
 @Path("/api")
 @Produces(MediaType.APPLICATION_JSON)
 public class AuthClientsResource {
 
-    private final TranslatrConfig config;
+    private final AuthProviderStatusService statusService;
 
     @Inject
-    public AuthClientsResource(TranslatrConfig config) {
-        this.config = config;
+    public AuthClientsResource(AuthProviderStatusService statusService) {
+        this.statusService = statusService;
     }
 
     @GET
     @Path("/authclients")
     @PermitAll
     public List<AuthClientDto> find() {
-        return Arrays.stream(config.auth().providers().split(","))
-                .map(String::trim)
-                .filter(p -> !p.isBlank())
-                .map(p -> {
+        return statusService.active().stream()
+                .map(s -> {
                     AuthClientDto dto = new AuthClientDto();
-                    dto.key = p;
-                    dto.url = "/login/" + p;
+                    dto.key = s.key();
+                    dto.url = "/login/" + s.key();
                     return dto;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 }
